--- a/2024.1/POO/aula_30_01_24/lista_1_funcoes.ipynb
+++ b/2024.1/POO/aula_30_01_24/lista_1_funcoes.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aluno: fulano de tal"
+    "#### Aluno: fulano de tal"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Calculadora ---\n",
+      "Opções: \n",
+      "0 - Sair\n",
+      "1 - Somar\n",
+      "2 - Multiplicar\n",
+      "3 - Dividir\n",
+      "-------------------\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(escreve_menu())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Crie uma função que receba dois números e mostre o resultado das quatro operações básicas.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(escreve_menu())"
+    "def calc_operacoes(num1, num2):\n",
+    "    print(f\"Soma = {num1 + num2}\")\n",
+    "    print(f\"Subtração = {num1 - num2}\")\n",
+    "    print(f\"Multiplicação = {num1 * num2}\")\n",
+    "    print(f\"Divisão = {num1 / num2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soma = 15\n",
+      "Subtração = 5\n",
+      "Multiplicação = 50\n",
+      "Divisão = 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc_operacoes(10, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Crie quatro funções para as quatro operações básicas. Essas funções devem receber dois valores e retornar o resultado. Escreva esse resultado.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def somar(num1, num2):\n",
+    "    return num1 + num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subtrair(num1, num2):\n",
+    "    return num1 - num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiplicar(num1, num2):\n",
+    "    return num1 * num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dividir(num1, num2):\n",
+    "    return num1 / num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "-5\n",
+      "25.0\n",
+      "3.3333333333333335\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(somar(3, 5))\n",
+    "print(subtrair(5, 10))\n",
+    "print(multiplicar(10, 2.5))\n",
+    "print(dividir(10, 3))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
